--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
   box-sizing: border-box;
 }
 
-button {
-  height: 100%;
-  width: 100%;
+.button {
+  //height: 100%;
+  //width: 100%;
 }
 /* 
 html {
