--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,9 @@
   box-sizing: border-box;
 }
 
-.button {
-  //height: 100%;
-  //width: 100%;
+button {
+  height: 100%;
+  width: 100%;
 }
 /* 
 html {
@@ -47,25 +47,123 @@ body.arcade {
 }
 
 body {
-  font-family: sans-serif;
+  display: grid;
+  grid-template-rows: 4rem 1fr;
+ 
+}
+
+/* ENCABEZADO*/
+h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  font-weight: 100;
+  color: var(--color-letra);
+  font-family: var(--font);
+  /* text-shadow: 1px 1px var(--sombra); */
+}
+
+
+header {
+  width: 100%;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.24);
+  border-bottom: 2px solid var(--color-letra);
+  background-color: var(--colorSecundario);
+}
+
+
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+  color: black;
   font-weight: bold;
+  border: 1px solid  var(--colorSecundario);
+  box-shadow: 1px 1px 1px  #ebad4b;
+  border-radius: 5px;
+  margin: 1rem 0.5rem;
+  padding: 0.5rem;
+}
+
+/*UL ARCADE*/
+/*
+ul.arcade {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+  color: black;
+  font-weight: bold;
+  color: rgb(223, 223, 72);
+  font-weight: bold;
+  border: 1px solid  var(--colorSecundario);
+  box-shadow: 1px 1px 2px  #21466b;
+  border-radius: 5px;
+  margin: 0.5rem;
+  padding: 0.7rem;
+}
+*/
+/* TABLERO*/
+
+
+.tablero {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  border: 2px solid  var(--colorSecundario);
+  border-radius: 5px;
+  grid-column-gap: 1rem;
+  width: 25rem;
+  height: 25rem;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--colorSecundario);
+  
 }
+
+
 
 .card {
-  width: 125px;
-  height: 125px;
+  width: 5rem;
+  height: 5rem;
   perspective: 500px;
-  margin: 0.5rem;
+  border: 1px solid  var(--colorSecundario);
+  border-radius: 0.5rem;
+  background-color: #ffefd6;
+  box-shadow: 1px 1px 1px  #ebad4b;
 }
 
+
+/*cartas cuando son arcade*/
+/*
+section {
+  width: 4.5rem;
+  height: 4.5rem;
+  perspective: 500px;
+  border: 1px solid  var(--colorSecundario);
+  border-radius: 0.5rem;
+  background-color: #f16b6b;
+  box-shadow: 1px 1px 1px  #21466b;
+}
+*/
 .content {
   position: absolute;
   width: 100%;
   height: 100%;
   transition: transform 1s;
   transform-style: preserve-3d;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
 .front,
@@ -73,8 +171,8 @@ body {
   position: absolute;
   height: 100%;
   width: 100%;
-  background: var(--colorDegradadoCarta);
   display: grid;
+  background: var(--colorDegradadoCarta);
   place-content: center;
   font-size: 8rem;
   border-radius: 0.5rem;
@@ -88,7 +186,7 @@ body {
 .back {
   background: var(--colorDegradadoCartaE);
   transform: rotateY(180deg);
-  font-size: 5em;
+  font-size: 3em;
 }
 
 .card.flipped .content {
@@ -106,7 +204,6 @@ table {
 }
 body {
   background-color: var(--colorfondo);
-  display: flex;
 }
 
 .match {
@@ -124,20 +221,6 @@ body {
   transform: rotate(720deg);
 }
 
-header {
-  width: 100%;
-  height: 6rem;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: row;
-  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.24);
-  border-bottom: 2px solid var(--color-letra);
-
-  background-color: var(--colorSecundario);
-}
-
 button {
   width: min-content;
   height: min-content;
@@ -149,16 +232,28 @@ button {
   border-radius: 4px;
 }
 
-li {
-  list-style: none;
-  color: var(--color-letra);
-  font-family: var(--font2);
-  font-weight: 200;
+
+/*MOVIMIENTO AMBAS CARTAS COINCIDEN*/
+
+@keyframes movimiento {
+  50% {
+      transform: translateY(20rem);
+  }
+  95% {
+      transform: translate(30rem);
+      visibility: hidden;
+  }
+  100% {
+      opacity:0;
+  }
 }
-h1 {
-  font-size: 4rem;
-  font-weight: 100;
-  color: var(--color-letra);
-  font-family: var(--font);
-  /* text-shadow: 1px 1px var(--sombra); */
+
+.move{
+  animation: movimiento 2s;
+  animation-timing-function:ease-in;
+  animation-direction:alternate;
+  animation-fill-mode: both;
+  animation-delay: 1s;
 }
+
+
