--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@
   box-sizing: border-box;
 }
 
-.button {
-  //height: 100%;
-  //width: 100%;
-}
 /* 
 html {
   --colorfondo: #f2deba;
@@ -47,17 +43,72 @@ body.arcade {
 }
 
 body {
-  font-family: sans-serif;
-  font-weight: bold;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-rows: 4rem 1fr;
+  background-color: var(--colorfondo);
 }
 
+/* ENCABEZADO*/
+h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  font-weight: 100;
+  color: var(--color-letra);
+  font-family: var(--font);
+  /* text-shadow: 1px 1px var(--sombra); */
+}
+header {
+  width: 100%;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.24);
+  border-bottom: 2px solid var(--color-letra);
+  background-color: var(--colorSecundario);
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+  color: black;
+  font-weight: bold;
+  border: 1px solid var(--colorSecundario);
+  box-shadow: 1px 1px 1px #ebad4b;
+  border-radius: 5px;
+  margin: 1rem 0.5rem;
+  padding: 0.5rem;
+}
+
+.tablero {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  border: 2px solid var(--colorSecundario);
+  border-radius: 5px;
+  grid-column-gap: 1rem;
+  width: 25rem;
+  height: 25rem;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--colorSecundario);
+}
 .card {
-  width: 125px;
-  height: 125px;
+  width: 5rem;
+  height: 5rem;
+  /* what? */
   perspective: 500px;
-  margin: 0.5rem;
+  border: 1px solid var(--colorSecundario);
+  border-radius: 0.5rem;
+  background-color: #ffefd6;
+  box-shadow: 1px 1px 1px #ebad4b;
 }
 
 .content {
@@ -66,6 +117,9 @@ body {
   height: 100%;
   transition: transform 1s;
   transform-style: preserve-3d;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
 .front,
@@ -88,14 +142,8 @@ body {
 .back {
   background: var(--colorDegradadoCartaE);
   transform: rotateY(180deg);
-  font-size: 5em;
+  font-size: 3em;
 }
-
-.card.flipped .content {
-  transform: rotateY(180deg);
-  transition: transform 0.5s;
-}
-
 table {
   margin: auto;
   margin-top: 1rem;
@@ -104,9 +152,9 @@ table {
   border-radius: 5px;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.281);
 }
-body {
-  background-color: var(--colorfondo);
-  display: flex;
+.card.flipped .content {
+  transform: rotateY(180deg);
+  transition: transform 0.5s;
 }
 
 .match {
@@ -124,19 +172,7 @@ body {
   transform: rotate(720deg);
 }
 
-header {
-  width: 100%;
-  height: 6rem;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: row;
-  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.24);
-  border-bottom: 2px solid var(--color-letra);
-
-  background-color: var(--colorSecundario);
-}
+/*  */
 
 button {
   width: min-content;
@@ -149,16 +185,87 @@ button {
   border-radius: 4px;
 }
 
-li {
-  list-style: none;
-  color: var(--color-letra);
-  font-family: var(--font2);
-  font-weight: 200;
+/*MOVIMIENTO AMBAS CARTAS COINCIDEN*/
+
+@keyframes movimiento {
+  50% {
+    transform: translateY(20rem);
+  }
+  95% {
+    transform: translate(30rem);
+    visibility: hidden;
+  }
+  100% {
+    opacity: 0;
+  }
 }
-h1 {
-  font-size: 4rem;
-  font-weight: 100;
+
+.move {
+  animation: movimiento 2s;
+  animation-timing-function: ease-in;
+  animation-direction: alternate;
+  animation-fill-mode: both;
+  animation-delay: 1s;
+}
+
+/* //////////////////////MODAL////////////////////////// */
+#modal {
+  background-color: rgba(128, 128, 128, 0.616);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   color: var(--color-letra);
-  font-family: var(--font);
-  /* text-shadow: 1px 1px var(--sombra); */
+}
+
+#modal div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: var(--font2);
+  font-weight: bold;
+  background-color: var(--colorSecundario);
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.39);
+}
+
+#modal button {
+  font-family: var(--font2);
+  color: #19282f;
+  font-weight: bold;
+  border-radius: 1rem;
+  align-self: center;
+  margin-top: 1rem;
+  width: 80%;
+  height: 3rem;
+  border-color: #6aa4aa;
+}
+
+#modal button {
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: white;
+  background-color: black;
+  border-radius: 1rem;
+  box-shadow: 0px 3px 0px rgb(68, 66, 66);
+  line-height: 35px;
+}
+
+#modal button:hover {
+  background-color: rgb(78, 64, 64);
+}
+
+#modal button:active {
+  background-color: black;
+  box-shadow: 0 1px #666;
+  transform: translateY(5px);
 }
