--- a/style.css
+++ b/style.css
@@ -6,11 +6,6 @@
   box-sizing: border-box;
 }
 
-button {
-  height: 100%;
-  width: 100%;
-}
-
 /* 
 html {
   --colorfondo: #f2deba;
@@ -18,12 +13,14 @@ html {
   --colorDegradadoCartaE: linear-gradient(#0e5e6f, #ffefd6);
   --colorSecundario: #ffefd6;
 } */
+
 html {
   --colorfondo: #ffefd6;
   --colorDegradadoCarta: #0e5d6fc5;
   --colorDegradadoCartaE: #6aa4aa;
   --colorSecundario: #f2deba;
   --color-letra: #19282f;
+  --color-sombra: #ebad4b;
   --table: var(--colorSecundario);
   --font: Major Mono Display;
   --font2: ;
@@ -35,6 +32,7 @@ html {
   --colorSecundario: #006e7f;
   --color-letra: #f8cb2e;
 } */
+/*
 body.arcade {
   --colorfondo: #f55353;
   --colorDegradadoCarta: linear-gradient(#f8b447, #fc6620);
@@ -42,23 +40,95 @@ body.arcade {
   --colorSecundario: #143f6b;
   --color-letra: #f55353;
   --sombra: rgba(255, 255, 255, 0.637);
+  --sombraUlMemory:#21466b;
   --font: nabla;
   --font2: Roboto Slab;
   --table: #e73939d2;
 }
+*/
 
 body {
-  font-family: sans-serif;
-  font-weight: bold;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-rows: 4rem 1fr;
+  background-color: var(--colorfondo);
 }
 
+/* ENCABEZADO*/
+h1 {
+  display: flex;
+  font-size: 3rem;
+  font-weight: 100;
+  color: var(--color-letra);
+  font-family: var(--font);
+  align-items: center;
+  justify-content: center;
+  padding: 0.3rem;
+  /* text-shadow: 1px 1px var(--sombra); */
+}
+header {
+  width: 100%;
+  height: 4rem;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.24);
+  border-bottom: 2px solid var(--color-letra);
+  background-color: var(--colorSecundario);
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+  color: black;
+  font-weight: bold;
+  box-shadow: 1px 1px 5px var(--color-letra);
+  border-radius: 5px;
+  margin: 1rem 0.5rem;
+  padding: 0.5rem;
+  background-color: var(--colorSecundario);
+}
+
+/* UL ARCADE */
+/*
+ul.arcade {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+  color: rgb(223, 223, 72);
+  font-weight: bold;
+  border: 1.5px solid  var(--colorSecundario);
+  box-shadow: 1px 1px 2px var(--sombraUlMemory); 
+  border-radius: 5px;
+  margin: 1rem 0.5rem;
+  padding: 0.5rem;
+}
+
+  */
+
+.tablero {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  border: 2px solid var(--colorSecundario);
+  border-radius: 5px;
+  grid-column-gap: 1rem;
+  width: 25rem;
+  height: 25rem;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--colorSecundario);
+}
 .card {
-  width: 125px;
-  height: 125px;
+  width: 5rem;
+  height: 5rem;
+  /* what? */
   perspective: 500px;
-  margin: 0.5rem;
+  border: 1px solid var(--colorSecundario);
+  border-radius: 0.5rem;
+  background-color: #ffefd6;
+  box-shadow: 1px 1px 1px var(--color-sombra);
 }
 
 .content {
@@ -67,6 +137,9 @@ body {
   height: 100%;
   transition: transform 1s;
   transform-style: preserve-3d;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
 .front,
@@ -89,14 +162,8 @@ body {
 .back {
   background: var(--colorDegradadoCartaE);
   transform: rotateY(180deg);
-  font-size: 5em;
+  font-size: 3em;
 }
-
-.card.flipped .content {
-  transform: rotateY(180deg);
-  transition: transform 0.5s;
-}
-
 table {
   margin: auto;
   margin-top: 1rem;
@@ -105,9 +172,9 @@ table {
   border-radius: 5px;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.281);
 }
-body {
-  background-color: var(--colorfondo);
-  display: flex;
+.card.flipped .content {
+  transform: rotateY(180deg);
+  transition: transform 0.5s;
 }
 
 .match {
@@ -125,32 +192,45 @@ body {
   transform: rotate(720deg);
 }
 
-header {
-  width: 100%;
-  height: 6rem;
+/*  */
 
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: row;
-  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.24);
-  border-bottom: 2px solid var(--color-letra);
+button {
+  width: min-content;
+  height: min-content;
 
-  background-color: var(--colorSecundario);
+  /* align-self: flex-end; */
+  background-color: #1b2430;
+  color: var(--colorSecundario);
+  border: 1px solid;
+  border-radius: 4px;
 }
 
-li {
-  list-style: none;
-  color: var(--color-letra);
-  font-family: var(--font2);
-  font-weight: 200;
+.front:hover {
+  background-color: var(--colorDegradadoCartaE);
 }
-h1 {
-  font-size: 4rem;
-  font-weight: 100;
-  color: var(--color-letra);
-  font-family: var(--font);
-  /* text-shadow: 1px 1px var(--sombra); */
+
+/*MOVIMIENTO AMBAS CARTAS COINCIDEN*/
+
+@keyframes movimiento {
+  50% {
+    transform: translateY(5rem);
+  }
+  75% {
+    transform: translateY(10rem);
+  }
+  100% {
+    transform: translateY(15rem);
+
+    opacity: 0;
+  }
+}
+
+.move {
+  animation: movimiento 2s;
+  animation-timing-function: ease-in;
+  animation-direction: alternate;
+  animation-fill-mode: both;
+  animation-delay: 0.5s;
 }
 
 /* //////////////////////MODAL////////////////////////// */
@@ -181,7 +261,7 @@ h1 {
   box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.39);
 }
 
-/* #modal button {
+#modal button {
   font-family: var(--font2);
   color: #19282f;
   font-weight: bold;
@@ -192,12 +272,6 @@ h1 {
   height: 3rem;
   border-color: #6aa4aa;
 }
-
-#modal button:hover {
-  color: #ffefd6; 
-  background-color: azure;
-}
- */
 
 #modal button {
   cursor: pointer;
@@ -219,4 +293,14 @@ h1 {
   background-color: black;
   box-shadow: 0 1px #666;
   transform: translateY(5px);
+}
+
+/* CURSOR */
+.card {
+  cursor: pointer;
+}
+
+ul,
+h1 {
+  cursor: default;
 }
